--- a/src/main/resources/templates/unit/index.html
+++ b/src/main/resources/templates/unit/index.html
@@ -60,7 +60,7 @@
                     <button onclick="showEditRow(this); return false;">Edit</button>
                 </td>
                 <td>
-                    <form th:action="@{'/unit/delete/'+${unit.id}}" th:method="post">
+                    <form th:action="@{'/unit/delete/'+${unit.id}}" th:method="get">
                         <input type="submit" value="Delete"/>
                     </form>
                 </td>
@@ -77,6 +77,7 @@
                     <td><input type="text" name="station"
                                th:value="${unit.station}"/></td>
                     <td><input type="number" name="unitnumber"
+                               min="1" step ="1"
                                th:value="${unit.unitnumber}"/></td>
                     <td><input type="text" name="type"
                                th:value="${unit.type}"/></td>
@@ -98,7 +99,8 @@
                 <form style="background: #78DBE2" action="/unit/create" method="post">
                     <td>&#10060;</td>
                     <td><input type="text" name="station"/></td>
-                    <td><input type="number" name="unitnumber"/></td>
+                    <td><input type="number" name="unitnumber"
+                               min="1" step ="1"/></td>
                     <td><input type="text" name="type"/></td>
                     <td><input type="text" name="description"/></td>
                     <td colspan="3" style="text-align:left">
