--- a/src/main/resources/templates/error/error-400.html
+++ b/src/main/resources/templates/error/error-400.html
@@ -10,6 +10,7 @@
         Invalid request content. Please,
         complete fields according to request
     </h1>
+    <div class="txt_field" th:text=${request}></div>
 </div>
 </body>
 </html>
