--- a/src/main/resources/templates/error/error-500.html
+++ b/src/main/resources/templates/error/error-500.html
@@ -7,6 +7,8 @@
 <body>
 <div class="center">
     <h1>Error 500. Server error</h1>
+    <div class="txt_field" th:text=${request}></div>
+
 </div>
 </body>
 </html>
