--- a/src/main/resources/templates/auth/login-.html
+++ b/src/main/resources/templates/auth/login-.html
@@ -2,32 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="/css/register.css"/>
-    <title>Registration</title>
+    <title>Authorization</title>
 </head>
 <body>
 <div class="center">
-    <h1>Registration</h1>
-    <div class="red" th:if="${param.error}">
-        Username already exists
+    <h1>Login</h1>
+    <div th:if="${param.error}" class="red">
+        Invalid username and password.
     </div>
-    <form th:action="@{/auth/sign-up}" method="post">
+    <div th:if="${param.logout}" class="red">
+        You have been logged out.
+    </div>
+    <form th:action="@{/login}" method="post">
         <div class="txt_field">
             <input type="text" name="username"/>
             <span></span>
             <label>Username</label>
         </div>
         <div class="txt_field">
-            <input type="text" name="email"/>
-            <span></span>
-            <label>Email</label>
-        </div>
-        <div class="txt_field">
             <input type="password" name="password"/>
             <span></span>
             <label>Password</label>
         </div>
-        <input type="submit" value="Sign up"/>
-        <div class="signup_link"></div>
+        <input type="submit" value="Login"/>
+        <div class="signup_link">Not a member? <a href="/register">Signup</a></div>
     </form>
 </div>
 </body>
